--- a/css/style.css
+++ b/css/style.css
@@ -10,22 +10,40 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   text-rendering: optimizeLegibility;
+  background-color: #f9fafb;
 }
 
 * {
   box-sizing: border-box;
 }
 
-.credits {
-  color: #777;
-  position: fixed;
-  bottom: 24px;
-  left: 24px;
-  font-size: 11px;
-  text-align: center;
+.card {
+  width: 340px;
+  margin-top: 200px;
+  margin-left: auto;
+  margin-right: auto;
+  display: flex;
+  flex-direction: column;
+  background-color: white;
+  border-radius: 8px;
+  padding: 20px;
+  box-shadow: 0px 4px 6px rgba(249, 250, 251, 0.1);
+  border: 1px solid rgba(82, 82, 82, 0.1);
 }
 
-.credits a {
-  color: #000;
-  font-weight: bold;
+.card-header {
+  display: flex;
+}
+
+.card-img {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  margin: 10px;
+}
+
+h2.card-title {
+  font-size: 1.25rem;
+  font-weight: 600;
+  margin: 0;
 }
