--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,11 @@
 /* -------- Reset ----- */
+:root {
+  --primary-color: #171717;
+  --secondary-color: #525252;
+  --pramary-color: #d2d6db;
+  --secondary-color: #e0e0e0;
+}
+
 * {
   box-sizing: border-box;
   margin: 0;
@@ -6,6 +13,8 @@
 }
 
 body {
+  background-color: var(--pramary-color);
+  background-image: linear-gradient(#f9fafb, #d2d6db);
   margin: 0;
   font-family: "Noto Sans", system-ui, -apple-system, BlinkMacSystemFont,
     "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
@@ -15,8 +24,6 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   text-rendering: optimizeLegibility;
-  background-color: #f9fafb;
-  color: #171717;
 }
 
 /* -------- Card Container ----- */
@@ -25,8 +32,8 @@ body {
   margin: 200px auto 0;
   background-color: white;
   border-radius: 0.5rem;
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-  padding: 25px;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
+  padding: 1.5rem;
 }
 
 /* -------- User Info ----- */
@@ -39,28 +46,37 @@ body {
 }
 
 .user-avatar {
-  width: 50px;
-  height: 50px;
+  width: 3rem;
+  height: 3rem;
   border-radius: 999px;
 }
 
 /* -------- Typography ----- */
 
 .user-name {
-  font-size: 1.125rem;
-  line-height: 1.5rem;
   font-weight: 600;
-  color: #171717;
+  font-size: 1.125rem;
+  line-height: 1.75rem;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  max-width: 14.25rem;
 }
 
 .user-handle {
+  font-weight: 400;
   font-size: 0.875rem;
+  color: var(--secondary-color);
   line-height: 1.25rem;
-  color: #525252;
+  max-width: 14.25rem;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
 }
 
 .testimonial-message {
+  font-weight: 400;
   font-size: 1rem;
   line-height: 1.5rem;
-  color: #525252;
+  color: var(--secondary-color)
 }
